initial commit: add selenium testng project